--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-parallax": "^3.5.1",
     "react-router-dom": "^6.18.0",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.9.0"
+    "sweetalert2": "^11.9.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
