--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.18.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.9.0",
+    "swiper": "^11.0.3",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
